Form size, positioning, textbox responsiveness for mobile. Footer adjustments for centering. Solved hamburger menu dropdown for mobile, coloring, font change and size, centering, remove more button, address logic to reveal and hide buttons accordingly, dynamic responsiveness on all elements adjusting for screen size. Finish Asset page second row collapsing, adjust positiong of hero text for screen size text loss. Finish adjusting PayProcess for mobile in second row. Gather Row css rules and spread margins evenly across all pages. Equip Fin page coloring, font changes, positioning, sizing, margins, etc. 2.5 hours

--- a/main.css
+++ b/main.css
@@ -80,14 +80,35 @@ linear-gradient(135deg,rgb(255,203,112) 0%,rgb(199,81,192) 50%,rgb(65,88,208) 10
     color: rgb(12, 59, 93);
 }
 
-@media screen and (max-width: 992px) {
-    .visibleLinks {
-        margin: 5px 10px;
-        font-size: calc(9px + 0.75vw);
+.mobileLinks {
+    display: none;
+}
+
+@media screen and (max-width: 991.8px) {
+    #dropdownCtrl, #dropdownMenu {
+        display: none;
     }
 
-    .dropdownLinks {
-        font-size: calc(9px + 0.75vw);
+    .mobileLinks {
+        display: block;
+    }
+
+    .links {
+        margin: 5px 10px;
+        font-size: calc(10px + 0.75vw);
+        color: rgb(0, 160, 223);
+        background-color: white;
+        border-radius: 5px;
+        text-align: center;
+        padding: 5px 10px;
+        font-family: "Poppins", sans-serif;
+        white-space: nowrap;
+        box-shadow: 1px 1px 2px rgb(0, 0, 0, 0.45);
+    }
+
+    .links:hover {
+        background-color: rgb(0, 160, 223);
+        color: white;
     }
 
     #hamButton {
@@ -106,21 +127,21 @@ linear-gradient(135deg,rgb(255,203,112) 0%,rgb(199,81,192) 50%,rgb(65,88,208) 10
 
     #hamburgerList {
         float: right;
-        background-color: rgb(0, 160, 223);
-        border-radius: 5px;
-        padding: 5px 20px;
+        background-color: rgb(12, 59, 93);
+        border-radius: 15px;
+        padding: 10px 20px;
     }
 
     #navMain {
         background-color: rgb(240, 248, 255, 0.05);
     }
+
+    #dropdownMenu {
+        background-color: rgb(12, 59, 93);
+    }
 }
 
 /* GLOBAL CSS */
-/* * {
-    font-family: 'Roboto', sans-serif;
-} */
-
 body {
     padding-top: 116px;
 }
@@ -178,6 +199,30 @@ h3 {
     justify-content: center;
 }
 
+.thirdRow {
+    display: flex;
+    justify-content: center;
+    margin: 50px auto;
+}
+
+.fourthRow {
+    display: flex;
+    justify-content: center;
+    margin: 50px auto;
+}
+
+.fifthRow {
+    display: flex;
+    justify-content: center;
+    margin: 50px auto;
+}
+
+.sixthRow {
+    display: flex;
+    justify-content: center;
+    margin: 50px auto;
+}
+
 .boxes {
     text-align: center;
     border: 1px solid black;
@@ -185,33 +230,39 @@ h3 {
     box-shadow: 1px 1px 2px rgb(0, 0, 0, 0.45);
 }
 
-.thirdRow {
-    display: flex;
-    justify-content: center;
-}
-
-.contactForms {
-    /* display: inline-block; */
-    list-style: none;
-}
-
-.formTitle {
-    font-size: calc(12px + 1.4vw);
-    font-family: "Poppins", sans-serif;
-}
-
 .formDiv {
-    /* border: 1px solid black; */
     border-radius: 5px;
     background-color: rgb(0, 160, 223, 0.8);
     text-align: center;
     margin: 25px;
     padding: 30px 0px 20px 0px;
+    align-items: center;
+}
+
+.contactForms {
+    /* display: inline-block; */
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /* border: 1px solid black; */
+}
+
+.forms {
+    /* border: 1px solid black; */
+    margin-right: 25px;
+}
+
+.formTitle {
+    font-size: calc(12px + 1.4vw);
+    font-family: "Poppins", sans-serif;
+    margin: auto 15px;
 }
 
 .textbox {
     margin: 10px auto;
-    width: 30vw;
+    width: 35vw;
     height: 6vh;
     text-align: center;
     border-radius: 5px;
@@ -224,8 +275,12 @@ h3 {
 
 @media screen and (max-width: 670px) {
     .textbox[placeholder] {
-        font-size: calc(10px + 0.8vw);
+        font-size: calc(10px + 1vw);
         font-family: "Poppins", sans-serif;
+    }
+
+    .textbox {
+        width: 70vw;
     }
 }
 
@@ -241,19 +296,8 @@ h3 {
     font-family: "Averia Libre", cursive;
 }
 
-.fourthRow {
-    display: flex;
-    justify-content: center;
-    margin: 20px auto;
-}
-
 .legalText {
     font-size: calc(6px + 0.35vw);
-}
-
-.sixthRow {
-    display: flex;
-    justify-content: center;
 }
 
 /* FIRST ROW MAIN PAGE */
@@ -264,7 +308,6 @@ h3 {
 #mainPageHero {
     margin-top: 22vh;
 }
-
 
 /* SECOND ROW MAIN PAGE */
 #headshotDiv {
@@ -529,7 +572,13 @@ h3 {
 }
 
 #assetPageHero {
-    margin-top: 15vh;
+    margin-top: 12vh;
+}
+
+@media screen and (min-width: 1250px) {
+    #assetPageHero {
+        margin-top: 7.5vh;
+    }
 }
 
 #assetDescriptor {
@@ -652,7 +701,7 @@ h3 {
     text-align: center;
     align-items: center;
     margin: 25px auto;
-    border-radius: 5px;
+    border-radius: 35px;
     padding: 35px 25px;
 }
 
@@ -670,6 +719,13 @@ h3 {
     width: 85%;
 }
 
+@media screen and (max-width: 1000px) {
+    /* #payProcessDescriptorPic {
+        width: 100%;
+        
+    } */
+}
+
 
 /* EQUIP FIN PAGE */
 #topDivEquipFin {
@@ -682,15 +738,53 @@ h3 {
 
 .equipFinDescriptorDivs {
     text-align: center;
-    background-color: #0693e3;
-    border-radius: 5px;
-    padding: 50px 0;
-    font-size: calc(8px + 0.6vw);
 }
 
 .equipFinIcons {
     font-size: calc(12px + 2vw);
     margin: 10px auto;
+}
+
+#topEquipFinDescriptor {
+    background-color: rgb(12, 59, 93);
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: calc(12px + 1vw);
+    padding: 35px 20px;
+    border-radius: 20px;
+}
+
+.middleEquipFinDescriptors {
+    margin: auto;
+    background-color: rgb(25, 178, 80);
+    color: rgb(12, 59, 93);
+    font-family: "Averia Libre", cursive;
+    font-size: calc(12px + 1.2vw);
+    padding: 50px 20px;
+    border-radius: 15px;
+    align-items: center;
+}
+
+#bottomEquipFinDescriptor {
+    background-color: rgb(33, 94, 172);
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: calc(12px + 1vw);
+    border-radius: 20px;
+    padding: 35px 20px;
+}
+
+@media screen and (min-width: 1071px) {
+    .middleEquipFinDescriptors {
+        min-height: 40vh;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .middleEquipFinDescriptors{
+        margin: 15px auto;
+        font-size: calc(12px + 1.8vw);
+    }
 }
 
 /* BIZ CONSULT PAGE */
@@ -743,15 +837,17 @@ h3 {
 } */
 
 #footRow {
-    padding: 15px 0;
+    padding: 15px 0 5px 0;
     display: flex;
     justify-content: center;
     border: 1px solid black;
     background-color: rgb(25, 178, 80, 0.85);
+    align-items: center;
 }
 
 #footTag {
     text-align: center;
+    align-items: center;
 }
 
 #learicist {
